Added READ functionality via .get method

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,10 @@
         </form>
 
         <ul class="todo-list">
+            <% todoTasks.forEach(details => { %>
             <li class="todo-list-item">
-                <div class="todo-list-item-name">What needs to get done?
+
+                <div class="todo-list-item-name"> <%- details.content %> </div>
                     <a href="" class="edit">
                         <span class="fas fa-edit"></span>
                     </a>
@@ -20,8 +22,8 @@
                     <a href="" class="remove">
                         <span class="fas fa-times"></span>
                     </a>
-                </div>
             </li>
+            <% }) %>
         </ul>
     </div>
 </body>
